welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: not found: value nbp
nbp = 0
^Program:4: error: not found: value nbp
	nbp = nbp +1
        ^Program:7: error: not found: value nbp
for (n <- 0 to nbp ) { 
               ^