welcome.lessons.welcome.loopfor.LoopFor.scala.code
nbp = 0
while (!estSurBiscuit) {
	nbp = nbp +1
	avance()
}
for (n <- 0 to nbp ) { 
	recule()
 }
